# AURA

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/autonomous-ai-coding-framework/: design.md  requirements.md  tasks.md
aura/: main.py
aura/config/: settings.py
scripts/: setup.sh
