[project]
name = "aura-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "cryptography>=45.0.7",
    "docker>=7.1.0",
    "httpx>=0.26.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.7",
    "ollama-python>=0.1.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "textual>=6.1.0",
]
